syntax = "proto3";

option csharp_namespace = "CatchMe.Web.Server.Protos";

package CurrentUser;

service CurrentUser {
	rpc CurrentUserInfo (CurrentUserRequest) returns (CurrentUserReply);
	rpc StartCurrentUserSession (StartCurrentUserSessionRequest) returns (StartCurrentUserSessionReply);
}

message StartCurrentUserSessionRequest {
	string DisplayName = 1;
	string Email = 2;
	Position LastPosition = 3;
	repeated FriendItem items = 4;
}

message StartCurrentUserSessionReply {	
	Position LastPosition = 1;
	repeated FriendItem items = 2;
}

message CurrentUserRequest {
	string searchQuery = 1;
}

message CurrentUserReply {
	string DisplayName = 1;
	Position LastPosition = 2;
	repeated FriendItem items = 3;
}

message FriendItem {
	string EAN = 1;
	string name = 2;
}

message Position {
	float longitude = 1;
	float latitude = 2;
} 